# HPM5361_CtrlBoard

./: .gitignore
hpm5361_kaiser/: board.c  board.h  pinmux.c  pinmux.h
rmcs_slave/: CMakeLists.txt  Makefile  debug000.jdebug
rmcs_slave/src/: main.c
